--- a/BaseProject/Base.lproj/Main.storyboard
+++ b/BaseProject/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fE7-Ie-iEb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="srt-Gp-DpE">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,7 +25,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="adu-Ri-B0J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="642" y="99"/>
+            <point key="canvasLocation" x="471" y="99"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -81,6 +82,22 @@
             </objects>
             <point key="canvasLocation" x="1380" y="99"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ge2-Qa-qj3">
+            <objects>
+                <navigationController id="srt-Gp-DpE" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IB7-Mx-pDO">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="rdK-BG-Zzg" kind="relationship" relationship="rootViewController" id="e9T-0d-Bn6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wH2-7W-sio" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1162" y="-729"/>
+        </scene>
         <!--TestV Cntrl-->
         <scene sceneID="5nL-7g-iUG">
             <objects>
@@ -88,13 +105,153 @@
                     <view key="view" contentMode="scaleToFill" id="dZn-A1-gFs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H5g-3Q-D5m">
+                                <rect key="frame" x="0.0" y="102" width="375" height="565"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BLEDeviceCell" rowHeight="70" id="dQY-SH-MGa" customClass="BLEDeviceCell" customModule="BaseProject" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dQY-SH-MGa" id="T9G-k4-kuI">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ou7-ov-U9S">
+                                                    <rect key="frame" x="14" y="2" width="347" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ou7-ov-U9S" firstAttribute="leading" secondItem="T9G-k4-kuI" secondAttribute="leadingMargin" constant="-1" id="Dtp-7t-hjs"/>
+                                                <constraint firstItem="ou7-ov-U9S" firstAttribute="centerX" secondItem="T9G-k4-kuI" secondAttribute="centerX" id="JXT-aV-ZQt"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="ou7-ov-U9S" secondAttribute="bottom" constant="7" id="Trb-3i-IMW"/>
+                                                <constraint firstItem="ou7-ov-U9S" firstAttribute="top" secondItem="T9G-k4-kuI" secondAttribute="topMargin" constant="-9" id="wTh-By-Egg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="deviceInfoLabel" destination="ou7-ov-U9S" id="A3N-ib-0OC"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="rdK-BG-Zzg" id="4v9-jW-RE0"/>
+                                    <outlet property="delegate" destination="rdK-BG-Zzg" id="3YY-yb-aqU"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vog-mG-bNU">
+                                <rect key="frame" x="245" y="64" width="122" height="30"/>
+                                <state key="normal" title="Stop Searching">
+                                    <color key="titleColor" red="0.94675999360710661" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="endSearchingAct:" destination="rdK-BG-Zzg" eventType="touchUpInside" id="7gb-9L-6vp"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="BrW-Sy-qLo">
+                                <rect key="frame" x="177" y="64" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vzd-1V-JOf">
+                                <rect key="frame" x="16" y="64" width="90" height="30"/>
+                                <state key="normal" title="Searching">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="startSearchingAct:" destination="rdK-BG-Zzg" eventType="touchUpInside" id="fNb-S5-td2"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.98802347715736039" green="0.98802347715736039" blue="0.98802347715736039" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="H5g-3Q-D5m" secondAttribute="trailing" id="1fD-id-wou"/>
+                            <constraint firstItem="BrW-Sy-qLo" firstAttribute="leading" secondItem="vzd-1V-JOf" secondAttribute="trailing" constant="71" id="4E1-P8-bif"/>
+                            <constraint firstItem="H5g-3Q-D5m" firstAttribute="bottom" secondItem="M4T-SF-gdU" secondAttribute="bottom" id="7Qc-f0-geb"/>
+                            <constraint firstItem="M4T-SF-gdU" firstAttribute="trailing" secondItem="Vog-mG-bNU" secondAttribute="trailing" constant="8" id="Mj2-QD-Swr"/>
+                            <constraint firstItem="BrW-Sy-qLo" firstAttribute="centerX" secondItem="H5g-3Q-D5m" secondAttribute="centerX" id="R6J-sz-Vjk"/>
+                            <constraint firstItem="vzd-1V-JOf" firstAttribute="top" secondItem="BrW-Sy-qLo" secondAttribute="top" id="ULq-MW-N1L"/>
+                            <constraint firstItem="Vog-mG-bNU" firstAttribute="leading" secondItem="BrW-Sy-qLo" secondAttribute="trailing" constant="48" id="VcS-gC-ikS"/>
+                            <constraint firstItem="vzd-1V-JOf" firstAttribute="top" secondItem="M4T-SF-gdU" secondAttribute="top" id="cmZ-iX-7ct"/>
+                            <constraint firstItem="vzd-1V-JOf" firstAttribute="leading" secondItem="dZn-A1-gFs" secondAttribute="leadingMargin" id="udY-uX-7wB"/>
+                            <constraint firstItem="H5g-3Q-D5m" firstAttribute="leading" secondItem="dZn-A1-gFs" secondAttribute="leading" id="uqs-w6-p3z"/>
+                            <constraint firstItem="H5g-3Q-D5m" firstAttribute="top" secondItem="vzd-1V-JOf" secondAttribute="bottom" constant="8" symbolic="YES" id="wSD-by-vCh"/>
+                            <constraint firstItem="vzd-1V-JOf" firstAttribute="baseline" secondItem="Vog-mG-bNU" secondAttribute="baseline" id="wWq-He-YFY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="M4T-SF-gdU"/>
                     </view>
+                    <navigationItem key="navigationItem" id="I7b-Z8-pKV"/>
+                    <connections>
+                        <outlet property="scanningIndicator" destination="BrW-Sy-qLo" id="USm-FK-ban"/>
+                        <outlet property="tableView" destination="H5g-3Q-D5m" id="qR2-Og-bvI"/>
+                        <segue destination="qv7-Pp-klR" kind="show" identifier="segueBLEDevice" id="nau-hI-fdh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pDC-jb-1yO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-495" y="34"/>
+            <point key="canvasLocation" x="-326" y="-729"/>
+        </scene>
+        <!--Device InfoV Cntrl-->
+        <scene sceneID="tqE-eq-hCa">
+            <objects>
+                <viewController id="qv7-Pp-klR" customClass="BLEDeviceInfoVCntrl" customModule="BaseProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wDg-m3-H7x">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DBv-iM-Wuw">
+                                <rect key="frame" x="-4" y="95" width="383" height="189"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAE-wN-ZpP">
+                                        <rect key="frame" x="20" y="20" width="343" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lL7-I9-Ke0">
+                                        <rect key="frame" x="20" y="62" width="343" height="53"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Nk-Rm-uoO">
+                                        <rect key="frame" x="164" y="139" width="55" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.91236578705086102" green="0.92139911167512689" blue="0.92139911167512689" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal" title="Connect">
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="connAct:" destination="qv7-Pp-klR" eventType="touchUpInside" id="lWy-uW-11T"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.98017131979695427" green="0.98017131979695427" blue="0.98017131979695427" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="m6k-ML-BPb">
+                                <rect key="frame" x="8" y="292" width="358" height="375"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="aJo-dB-LEs"/>
+                    </view>
+                    <connections>
+                        <outlet property="idLabel" destination="lL7-I9-Ke0" id="wSj-QG-iCN"/>
+                        <outlet property="infoTextView" destination="m6k-ML-BPb" id="yea-hm-CnT"/>
+                        <outlet property="nameLabel" destination="EAE-wN-ZpP" id="MDE-Q6-Gf3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UNA-fa-gJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="533.60000000000002" y="-729.08545727136436"/>
         </scene>
     </scenes>
 </document>
